methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:30: error: not found: value SetCouleurBrosse
  SetCouleurBrosse(c)
  ^